WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257499
[GStreamer] Critical warning when updating video sink stats of a player in error state
https://bugs.webkit.org/show_bug.cgi?id=257499
Summary
[GStreamer] Critical warning when updating video sink stats of a player in er...
Philippe Normand
Reported
2023-05-30 10:19:59 PDT
(gdb) bt #0 g_logv (log_domain=0x7f3f386d0030 "GLib-GObject", log_level=G_LOG_LEVEL_CRITICAL, format=<optimized out>, args=args@entry=0x7ffecde929c0) at ../glib/gmessages.c:1422 #1 0x00007f3f385a52a3 in g_log (log_domain=log_domain@entry=0x7f3f386d0030 "GLib-GObject", log_level=log_level@entry=G_LOG_LEVEL_CRITICAL, format=format@entry=0x7f3f3860bba0 "%s: assertion '%s' failed") at ../glib/gmessages.c:1460 #2 0x00007f3f385a641d in g_return_if_fail_warning (log_domain=log_domain@entry=0x7f3f386d0030 "GLib-GObject", pretty_function=pretty_function@entry=0x7f3f386d72a8 <__func__.41> "g_object_get", expression=expression@entry=0x7f3f386d4fdd "G_IS_OBJECT (object)") at ../glib/gmessages.c:2930 #3 0x00007f3f386b48da in g_object_get (_object=0x0, first_property_name=0x7f3f4066eae2 "stats") at ../gobject/gobject.c:3003 #4 0x00007f3f3e2ff021 in WebCore::MediaPlayerPrivateGStreamer::updateVideoSinkStatistics() () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkit2gtk-4.1.so.0 #5 0x00007f3f3e2ff0c2 in WebCore::MediaPlayerPrivateGStreamer::videoPlaybackQualityMetrics() () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkit2gtk-4.1.so.0 #6 0x00007f3f3fba9b19 in WebCore::MediaPlayer::videoPlaybackQualityMetrics() () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkit2gtk-4.1.so.0 #7 0x00007f3f3f576e13 in WebCore::HTMLMediaElement::getVideoPlaybackQuality() () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkit2gtk-4.1.so.0 #8 0x00007f3f3e727b06 in WebCore::jsHTMLMediaElementPrototypeFunction_getVideoPlaybackQuality(JSC::JSGlobalObject*, JSC::CallFrame*) () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libwebkit2gtk-4.1.so.0 #9 0x00007f3ec3f681b8 in () #10 0x00007ffecde92d20 in () #11 0x00007f3f3ab8edf7 in op_call_slow_return_location () at /var/home/phil/WebKit/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-4.1.so.0 #12 0x0000000000000000 in () When attempting to play the video from
https://bugs.webkit.org/show_bug.cgi?id=183259#c23
and enabling the media stats overlay.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2023-05-30 10:22:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14492
EWS
Comment 2
2023-05-31 00:40:54 PDT
Committed
264718@main
(3fb2e1af3914): <
https://commits.webkit.org/264718@main
> Reviewed commits have been landed. Closing PR #14492 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-31 00:41:15 PDT
<
rdar://problem/110049467
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug