[GStreamer] Critical warning when updating video sink stats of a player in error state https://bugs.webkit.org/show_bug.cgi?id=257499

Reviewed by Xabier Rodriguez-Calvar.

Don't attempt to gather video rendering metrics if the player hasn't created a video sink.

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::updateVideoSinkStatistics):

Canonical link: https://commits.webkit.org/264718@main